--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "axios": "^0.22.0"
+    "axios": "^0.22.0",
+    "dotenv": "^10.0.0"
   }
 }
